# base91x

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  base91.cpp  base91.h  base91.hpp  base91.py  package.json  perf_base91.cpp  perf_base91.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.sh  test_base91.cpp  test_base91.py  test_base91x_c
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  main.yml
include/: base91x.h  base91x.hpp
jni/: Android.mk  Application.mk  build.sh
perf/: __main__.py  perf_base91x.cpp
src/: base91x.c  base91x.cpp  base91x.js
src/base91x/: __init__.py  __main__.py  base91x.py
src/main/java/base91x/: Base91x.java
src/test/java/base91x/: Base91xTest.java
tests/: base91x.test.js  index.html  test.json  test_base91x.c  test_base91x.cpp  test_base91x.py
