[project]
name = "base91x"
version = "1.0.0"
description = "base91x encoding/decoding library"
authors = [{ name = "Roman Babenko", email = "babenek@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["encode", "decode", "base91x"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/babenek/base91"
"Bug Tracker" = "https://github.com/babenek/base91/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
